--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,4 @@ authors = ["MozammilQ <mozammilq.ai@gmail.com>"]
 version = "0.1.0"
 
 [deps]
-Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
